# gl_vk_threaded_cadscene

./: CMakeLists.txt  LICENSE  README.md  THIRDPARTY  animation.comp.glsl  cadscene.cpp  cadscene.hpp  cadscene_gl.cpp  cadscene_gl.hpp  cadscene_vk.cpp  cadscene_vk.hpp  cadscenefile.cpp  cadscenefile.h  common.h  csfthreaded.cpp  nvcommandlist.h  nvdrawvulkanimage.cpp  nvdrawvulkanimage.h  rectangle.glsl  renderer.cpp  renderer.hpp  renderer_gl.cpp  renderer_glcmd.cpp  renderer_vk.cpp  renderer_vkgen.cpp  rendererthread_glcmd.cpp  rendererthread_vk.cpp  resources.hpp  resources_gl.cpp  resources_gl.hpp  resources_vk.cpp  resources_vk.hpp  resources_vkgen.cpp  resources_vkgen.hpp  scene.frag.glsl  scene.vert.glsl  threadpool.cpp  threadpool.hpp  vk_initlib.cpp  vk_nvx_device_generated_commands.cpp  (+1 more)
doc/: vulkan_nvxdevicegenerated.md  vulkan_uniforms.md
